--- a/css/style.css
+++ b/css/style.css
@@ -1170,3 +1170,40 @@ body::-webkit-scrollbar-thumb {
     font-size: 10px;
   }
 }
+
+/* ========================================== */
+.product {
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin: 10px;
+  width: 200px;
+  display: inline-block;
+  text-align: center;
+}
+
+.product img {
+  width: 100%;
+}
+
+.product h2 {
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.product .price {
+  font-weight: bold;
+}
+
+.product .add-to-cart {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
