--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,16 @@
   transform: translate(-50%, -50%);
 }
 
+.centrador{
+  text-align: center;
+  vertical-align: middle; 
+  height: 100%;
+}
+.centrar{
+  display: inline-block; 
+  line-height: inherit;
+}
+
 a {
   text-decoration: none;
 }
@@ -1244,5 +1254,10 @@ body::-webkit-scrollbar-thumb {
   100% {
     transform: translate(0, 0) rotate(0deg);
   }
+}
+
+.tiembla:hover{
+  transition: 1s all;
+  animation: shake 1s;
 }
 
